# KeyMappingsTool

./: .gitignore  AssistFuncWindow.cpp  AssistFuncWindow.h  AssistFuncWindow.ui  AssistFuncWorker.cpp  AssistFuncWorker.h  BigKey.hpp  BtnTriggerTypeEnum.cpp  BtnTriggerTypeEnum.h  CMakeLists.txt  CustomListView.h  DeadAreaSettings.cpp  DeadAreaSettings.h  DeadAreaSettings.ui  ForceFeedbackSettingsWindow.cpp  ForceFeedbackSettingsWindow.h  ForceFeedbackSettingsWindow.ui  ForceFeedbackWorker.cpp  ForceFeedbackWorker.h  KeyMapping.pro  MultiSelectCombobox.h  README.md  THIRD_PARTY_LICENSES.txt  ViGEmClient.lib  XboxDeadAreaSettings.cpp  XboxDeadAreaSettings.h  XboxDeadAreaSettings.ui  deadareasettings.cpp  deadareasettings.h  deadareasettings.ui  device_info.h  ets2keybinderwizard.cpp  ets2keybinderwizard.h  ets2keybinderwizard.ui  global.cpp  global.h  key_map.h  logwindow.cpp  logwindow.h  logwindow.ui  (+11 more)
ETS2_KeyBinder/: ets2keybinderwizard.cpp  ets2keybinderwizard.h  ets2keybinderwizard.ui
SCS_Telemetry/: scs-telemetry-common.hpp
resources/: appicon.rc  resource.qrc
src/: Main.cpp
src/common/: BigKey.hpp  BtnTriggerTypeEnum.cpp  BtnTriggerTypeEnum.h  DeviceDataTypeEnum.h  Global.cpp  Global.h  KeyMap.h  MappingConfigKey.h  StringConstants.h  Theme.h  UserConfigKey.h
src/core/: DirectInputCore.cpp  DirectInputCore.h
src/models/: DeviceInfo.h  MappingConfig.cpp  MappingConfig.h  MappingRelation.cpp  MappingRelation.h  UserConfig.cpp  UserConfig.h
src/services/: ConfigService.cpp  ConfigService.h  DirectInputService.cpp  DirectInputService.h  LogService.cpp  LogService.h  MessageBoxService.h
src/ui/ETS2_KeyBinder/: BracketRightWidget.cpp  Ets2KeyBinderWizard.cpp  Ets2KeyBinderWizard.h  Ets2KeyBinderWizard.ui  ManuallyBinder.cpp  ManuallyBinder.h  ShowKeyState.cpp  ShowKeyState.h
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
src/ui/pages/about_page/: AboutPage.cpp  AboutPage.h
src/ui/pages/forcefeedback_simulate_page/: ForceFeedbackSimulatePage.cpp  ForceFeedbackSimulatePage.h
src/ui/pages/home_page/: HomePage.cpp  HomePage.h
src/ui/pages/log_page/: LogPage.cpp  LogPage.h
src/ui/pages/settings_page/: SettingsPage.cpp  SettingsPage.h
src/ui/widgets/: CardMessageDialog.h  CollapsibleGroupBox.cpp  CollapsibleGroupBox.h  CurveEditor.cpp  CurveEditor.h  CustomListView.h  MultiSelectCombobox.h  NoWheelComboBox.h  WinUISwitch.cpp  WinUISwitch.h
src/utils/: IconFactory.cpp  IconFactory.h  MyUtils.h
src/workers/: AssistFuncWorker.cpp  AssistFuncWorker.h  ForceFeedbackWorker.cpp  ForceFeedbackWorker.h  LogWorker.h  SimulateTask.cpp  SimulateTask.h
